html tutorial end

--- a/index.html
+++ b/index.html
@@ -102,5 +102,10 @@
 			<input type="submit" name="sendbutton" value="Enviar">
 		</p>
 	</form>
+
+	<ul>
+		<li><a href="https://www.google.com/" target="blanck"> Ir a Google</a></li>
+		<li><a href="https://www.facebook.com" target="blanck">Ir a Faceoog</a></li>
+	</ul>
 </body>
 </html>
